# dgpmp2-nd

./: .gitignore  .gitmodules  LICENSE.txt  README.md  pyproject.toml  setup.py
demos/: planning_demo.ipynb
demos/urdf/ur5/: robot.urdf
demos/urdf/ur5/collision/: base.stl  forearm.stl  shoulder.stl  upperarm.stl  wrist1.stl  wrist2.stl  wrist3.stl
diff_gpmp2/: __init__.py
diff_gpmp2/differentiable_robot_model/: diff_robot_model.py
diff_gpmp2/gpmp2/: __init__.py  diff_gpmp2_planner.py  factor.py  factors.py  lr_optimizer.py  plan_layer.py  plot_matplotlib.py
diff_gpmp2/gpmp2/gp/: __init__.py  gp_factor.py  prior_cartesian_factor.py  prior_cartesian_trajectory_factor.py  prior_factor.py  prior_trajectory_factor.py  robot_limits_factor.py
diff_gpmp2/gpmp2/obstacle/: __init__.py  obstacle_cost.py  obstacle_factor.py
diff_gpmp2/gpmp2/obstacle/config/: viewpoint_default.json
diff_gpmp2/utils/: __init__.py  geometry.py  mat_utils.py  planner_utils.py  sdf.py
